# pysces

./: .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  .zenodo.json  ADDITIONAL_LICENCES.md  CHANGES.md  CITATION.cff  CMakeLists.txt  CONTRIBUTORS.md  CONTRIBUTORS.txt  DESCRIPTION.md  INSTALL.md  INSTALL.txt  LATEST.md  LATEST.txt  LICENCE.txt  LICENSE  LICENSE.txt  MANIFEST  MANIFEST.in  README.md  README.txt  conda-environment.yml  conda-requirements.txt  config.py  meson.build  pyproject.toml  requirements.txt  runtests  setup.py  setupegg.py  winbuild_mingw.bat  winbuild_mingw_inplace.bat
.github/workflows/: build-conda-unix.yml  build-conda-win.yml  build-conda.yml  cibuildwheel.yml  release-biosimulators.yml  test-gfortran.yml  test-setup-conda.yml
conda/: bld.bat  conda_build.txt
devtest/: run_tests.py  test_sbml_log_ln.py  test_sbml_rules_functions.py  test_sbml_time_events.py  test_state_mca_scans.py
devtest/models/: rohwer_sucrose2.psc
devtest/ref_data/BIOMD0000000012_url.xml/: simdata.pkl
devtest/ref_data/BIOMD0000000126.xml/: simdata.pkl
devtest/ref_data/BIOMD0000000860.xml/: simdata.pkl
devtest/ref_data/rohwer_sucrose2/: mcadata.pkl  scandata.pkl  ssdata.pkl
documentation/sphinx/: genindex.html  inputfile_doc.html  modindex.html  modules_doc.html  objects.inv  py-modindex.html  search.html  searchindex.js  searchindex.json  userguide.html  userguide_doc.html
documentation/sphinx/.doctrees/: environment.pickle  inputfile_doc.doctree  modules_doc.doctree  userguide.doctree  userguide_doc.doctree
documentation/sphinx/_sources/: inputfile_doc.txt  modules_doc.txt  userguide.txt  userguide_doc.txt
packaging/cibuildwheel/: macos_arm64.toml
packaging/conda/: README.md  VS2019_gfortran8_build.md  bld.bat  build_conda_linux.sh  build_conda_macos.sh  build_conda_windows.bat  conda_build.txt  conda_build_config.yaml  meta.linux.yaml  meta.macos.yaml  meta.posix.yaml  meta.windows.yaml  meta.yaml
packaging/conda-macos-arm64/: meta.yaml
packaging/conda-scripts/: README.md  build_conda_linux.sh  build_conda_macos.sh  build_conda_windows.bat  conda_build.txt
packaging/conda-unix/: conda_build_config.yaml  meta.yaml
packaging/conda-win/: conda_build_config.yaml  meta.yaml
packaging/conda/anaconda5.1/: conda_build.txt  meta.yaml
packaging/many_linux/: README.md  build_pysces.sh  build_script.sh  run_pysces.sh
packaging/wheels_win/: Instructions.txt  README.md  VS2017_gfortran8_build.md  create_environment.bat  fix_environment.bat
packaging/windows_libs/: build_export_lib.md  dcvlh.s
pysces/: CONTRIBUTORS.txt  PyscesConfig.py  PyscesContrib.py  PyscesContribUser.py  PyscesInterfaces.py  PyscesJWSParse.py  PyscesLink.py  PyscesMiniModel.new.py  PyscesMiniModel.py  PyscesModel.new.py  PyscesModel.py  PyscesModelMap.py  PyscesParScan.new.py  PyscesParScan.py  PyscesParse.py  PyscesPlot.py  PyscesPlot2.py  PyscesRandom.py  PyscesSBML.py  PyscesSED.py  PyscesScan.py  PyscesStoich.py  PyscesTest.py  PyscesUtils.py  PyscesWeb.py  README.txt  RateChar.py  __init__.py  _multicorescan.py  codeutil.py  meson.build  pysces.pth  setup.py  version.py  version.txt
pysces/contrib/: __init__.py
pysces/contrib/demo/: __init__.py  demotest.py
pysces/contrib/sbw/: __init__.py  sbw_func.py
pysces/contrib/visualise/: VisualiseClasses.py  VisualiseNodeClasses.py  VisualiseSBML.py  __init__.py
pysces/core2/: InfixParser.py  PyscesCore2.py  PyscesCore2Interfaces.py  PyscesCore2Modules.py  __init__.py  lex.py  version.py  yacc.py
pysces/docs/: DOCS.txt  HISTORY.txt  pysces-userguide.epub
pysces/examples/: __init__.py  benchmark.ipy  parallelscan.ipy  pysces_stochpy.py  testRunScatter.py  testinvalidstate.py  testparscanner.py  testratechar.py
pysces/kraken/: Kraken.py  KrakenDataTools.py  KrakenNET.py  KrakenServer.py  __init__.py  startup.py
pysces/kraken/controllers/: kill_tentacles.py  kraken_continuation.py  kraken_continuation_eigen.py  kraken_continuation_eigen2.py  kraken_intersect.py  kraken_scanner2.py
pysces/lib/: FirstDerivatives.py  __init__.py  lex.py  miriamids.py  pyparsing.py  yacc.py
pysces/metatool/: __init__.py
pysces/nleq2/: CMakeLists.txt  __init__.py  compile.bat  linalg_nleq2.f  main_nleq2.f  main_nleq2c.cpp  meson.build  nleq2_readme.txt  readme.txt  wnorm.f
pysces/nleq2/4.2/: __init__.py  nleq2.pyf
pysces/pitcon/: CMakeLists.txt  __init__.py  dpcon61w.f  meson.build  pcon61subd.f  pitcon.pyf
pysces/psc/: pysces_test_branch1.psc
pysces/pscmodels/: Burstmodel.psc  isola2a.psc  lin5_hill.psc  noisy_lin4.psc.txt  pysces_test_branch1.psc  pysces_test_linear1.psc  pysces_test_moiety1.psc  pysces_test_pitcon.psc
pysces/pysces/: PyscesContrib.py  PyscesContribUser.py  PyscesInterfaces.py  PyscesJWSParse.py  PyscesLink.py  PyscesModel.py  PyscesModelMap.py  PyscesPlot.py  PyscesSED.py  PyscesTest.py  PyscesUtils.py  version.py
pysces/pysces/contrib/sbw/: __init__.py
pysces/pysces/contrib/visualise/: VisualiseClasses.py  __init__.py
pysces/pysces/core2/: InfixParser.py  PyscesCore2Interfaces.py  PyscesCore2Modules.py  version.py
pysces/pysces/examples/: testinvalidstate.py
pysces/pysces/kraken/: Kraken.py  KrakenDataTools.py  KrakenServer.py  __init__.py  server_list
pysces/pysces/lib/: __init__.py
pysces/pysces/metatool/: __init__.py
pysces/pysces/nleq2/: nleq2.f  nleq2.pyf  readme.txt
pysces/pysces/nleq2/4.2/: __init__.py
pysces/pysces/pitcon/: dpcon61.f  readme.txt
pysces/pysces/pscmodels/: Burstmodel.psc  pysces_test_linear1.psc  pysces_test_pitcon.psc
pysces/pysces/sandbox/: Intersect.py
pysces/sandbox/: Intersect.py  __init__.py
pysces/tests/: __init__.py  runtests
pysces/win32/: checksum.md5
