[build-system]
build-backend = 'mesonpy'
requires = [
  'meson-python',
  'meson>=1.2.3',
	'ninja',
	'numpy>=2.0.0',
]

[tool.meson-python.args]
#setup = ['-Dc_link_args=-lquadmath']
compile = ['-j4']
#install = []
#dist = []

[project]
name = 'pysces'
dependencies = [
	'numpy>=1.23.5',
	'matplotlib',
	'scipy'
]
dynamic = ['version']
description = 'The Python Simulator for Cellular Systems - simulation and analysis tools for modelling biological systems'
readme = 'DESCRIPTION.md'
requires-python = '>=3.9'
license = {text = 'BSD 3-Clause'}
authors = [
  {name = 'Brett Olivier', email = 'pysces@googlegroups.com'},
  {name = 'Johann Rohwer', email = 'pysces@googlegroups.com'},
]
maintainers = [
  {name = 'Brett Olivier', email = 'pysces@googlegroups.com'},
  {name = 'Johann Rohwer', email = 'pysces@googlegroups.com'},
]
keywords = [
	'computational systems biology',
	'modelling',
	'simulation',
	'systems biology',
]
classifiers=[
	'Development Status :: 5 - Production/Stable',
	'Development Status :: 6 - Mature',
	'Environment :: Console',
	'Intended Audience :: End Users/Desktop',
	'Intended Audience :: Science/Research',
	'License :: OSI Approved :: BSD License',
	'Natural Language :: English',
	'Operating System :: OS Independent',
	'Programming Language :: Fortran',
	'Programming Language :: Python',
	'Topic :: Scientific/Engineering :: Bio-Informatics',
	'Topic :: Scientific/Engineering :: Chemistry',
]

[project.optional-dependencies]
parscan = ['ipyparallel', 'multiprocessing_on_dill']
cvode = ['assimulo']
sbml = ['python_libsbml']
all = [
	'ipyparallel',
	'multiprocessing_on_dill',
	'assimulo',
	'python_libsbml'
]

[project.urls]
homepage = "https://pysces.github.io"
documentation = "https://pyscesdocs.readthedocs.io"
source = "https://github.com/PySCeS/pysces"
download = "https://github.com/PySCeS/pysces/releases"
tracker = "https://github.com/PySCeS/pysces/issues"

[tool.cibuildwheel]
build = "cp312-* cp311-* cp310-* cp39-*"
skip = "*musllinux* pp*"
build-verbosity = "3"
test-command = "python -s -c \"import pysces; pysces.test(3)\""
build-frontend="pip"

[tool.cibuildwheel.linux]
archs = "x86_64"
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.macos]
archs = "x86_64"
before-build = [
	"sudo ln -sf /usr/local/bin/gfortran-11 /usr/local/bin/gfortran",
	"sudo mkdir -p /usr/local/gfortran",
	"sudo ln -sf /usr/local/Cellar/gcc@11/*/lib/gcc/11 /usr/local/gfortran/lib",
	"gfortran --version",
]

[tool.cibuildwheel.windows]
archs = "AMD64"

[tool.cibuildwheel.windows.environment]
PATH = "c:\\\\rtools40\\\\ucrt64\\\\bin;c:\\\\rtools40\\\\usr\\\\bin;$PATH"
